--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# compiled output
+# Compiled output
 /dist
 /node_modules
 
@@ -31,4 +31,11 @@ lerna-debug.log*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
-!.vscode/extensions.json
+!.vcode/extensions.json
+
+# Environtment
+.env
+
+# Package lock files
+yarn.lock
+package-lock.json
